checkpolicy/tests/negative/bad_syntax.te
module bad_syntax 1.0;

require {
	type foo_t;
	class file { read };
}

allow foo_t foo_t:file {
